[metadata]
name = screambox
description = A box that screams when a PagerDuty incident is raised.
long_description = file: README.md
author = Stefans Mezulis
author_email = stefans.mezulis@gmail.com
url = https://github.com/stefansm/screambox

[options]
include_package_data = True
package_dir=
    = src
packages = find:
python_requires = >=3.9
install_requires =
    aiohttp
    click

[options.packages.find]
where=src

[options.extras_require]
test = pytest

[options.entry_points]
console_scripts =
    screambox = screambox.monitor:start
